Fixed on iOS

--- a/_sass/_patterns.scss
+++ b/_sass/_patterns.scss
@@ -256,6 +256,8 @@
     position: absolute;
     right: 0;
     width: 15%;
+    padding: 0;
+    margin: 0;
 
     &:hover {
       background-color: lighten($blue, 5%);
@@ -268,6 +270,10 @@
     img {
       background-color: $blue;
       display: block;
+      height: 1.25em;
+      width: 1.35em;
+      margin: 0 auto;
+      padding: 0;
     }
   }
 }
